--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -22,7 +22,7 @@
             </Grid.ColumnDefinitions>
 
             <!-- Логотип или название сайта -->
-            <TextBlock Text="Medical Furniture Accounting" VerticalAlignment="Center" Margin="10" Foreground="White" FontSize="20" FontWeight="Bold"/>
+            <TextBlock Text="Учет медицинской техники" VerticalAlignment="Center" Margin="10" Foreground="White" FontSize="20" FontWeight="Bold"/>
 
             <!-- Навигационное меню -->
             <StackPanel Orientation="Horizontal" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center">
