--- a/Modals/AddSupplyModal.xaml
+++ b/Modals/AddSupplyModal.xaml
@@ -3,13 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:MedicalFurnitureAccounting.Modals"
+        xmlns:local="clr-namespace:MedicalFurnitureAccounting.Modals" xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
         Title="AddSupplyModal" Height="250" Width="300">
     <StackPanel>
         <Label Content="Добавление поставки" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center"/>
         <Label Content="Дата:" Margin="0 10 0 0"/>
-        <DatePicker x:Name="DatePicker" Margin="10"/>
+        <xctk:DateTimePicker x:Name="DatePicker" Margin="10"/>
         <Label Content="Поставка:"/>
         <ComboBox x:Name="SupplierComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Height="30">
