--- a/Pages/ProductsPage.xaml
+++ b/Pages/ProductsPage.xaml
@@ -34,7 +34,7 @@
                     <GridViewColumn Header="Категория" DisplayMemberBinding="{Binding Category.Name}" />
                     <GridViewColumn Header="Материал" DisplayMemberBinding="{Binding Material.Name}" />
                     <GridViewColumn Header="Номер поставки" DisplayMemberBinding="{Binding SupplyId}" />
-                    <GridViewColumn Header="Дата поставки" DisplayMemberBinding="{Binding Suppply.Date}" />
+                    <GridViewColumn Header="Дата поставки" DisplayMemberBinding="{Binding Suppply.Date, StringFormat='{}{0:dd.MM.yyyy HH:mm}'}" />
                     <GridViewColumn Header="Название" DisplayMemberBinding="{Binding Name}" />
                     <GridViewColumn Header="Колличество (шт)" DisplayMemberBinding="{Binding Count}" />
                     <GridViewColumn Header="Стелаж" DisplayMemberBinding="{Binding Room}" />
