--- a/Pages/SupplyPage.xaml
+++ b/Pages/SupplyPage.xaml
@@ -15,7 +15,7 @@
             <ListView ItemsSource="{Binding Supplies}" Margin="10" Height="350">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Header="Дата" DisplayMemberBinding="{Binding Date}"/>
+                        <GridViewColumn Header="Дата" DisplayMemberBinding="{Binding Date, StringFormat='{}{0:dd.MM.yyyy HH:mm}'}"/>
                         <GridViewColumn Header="Поставщик" DisplayMemberBinding="{Binding Supplier.Name}"/>
                     </GridView>
                 </ListView.View>
