--- a/Pages/CategoryPage.xaml
+++ b/Pages/CategoryPage.xaml
@@ -21,7 +21,16 @@
         <ListView ItemsSource="{Binding Categories}" Margin="10" Height="300" Name="CategoryListView">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Название" DisplayMemberBinding="{Binding Name}" />
+                    <GridViewColumn Header="Название" Width="200">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="{Binding Name}" VerticalAlignment="Center" Margin="0,0,10,0" />
+                                    <Button Content="Удалить" Click="DeleteCategoryButton_Click" Style="{StaticResource ButtonStyle}" Height="25" Width="60" Margin="10,0,0,0" />
+                                </StackPanel>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
