--- a/Pages/MaterialPage.xaml
+++ b/Pages/MaterialPage.xaml
@@ -4,7 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       mc:Ignorable="d"
-      Title="CategoryPage" Height="450" Width="800">
+      Title="MaterialPage" Height="450" Width="800">
     <StackPanel>
         <StackPanel Orientation="Horizontal" Margin="10">
             <StackPanel.Resources>
@@ -70,8 +70,23 @@
         <ListView ItemsSource="{Binding Materials}" Margin="10" Height="300" Name="materialListView">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Название" DisplayMemberBinding="{Binding Name}" />
+                    <GridViewColumn Header="Название" Width="200">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="{Binding Name}" VerticalAlignment="Center" Margin="0,0,10,0" />
+                                </StackPanel>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
                     <GridViewColumn Header="Цена (BYN)" DisplayMemberBinding="{Binding Price}" />
+                    <GridViewColumn>
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Удалить" Click="DeleteMaterialButton_Click"  Style="{StaticResource ButtonStyle}" Height="25" Width="60" Margin="10,0,0,0" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
                     <!-- Добавьте другие столбцы по вашему усмотрению -->
                 </GridView>
             </ListView.View>
