--- a/Pages/ProductsPage.xaml
+++ b/Pages/ProductsPage.xaml
@@ -1,7 +1,7 @@
 ﻿<Page x:Class="MedicalFurnitureAccounting.Pages.ProductsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      Title="Products Page" Height="450" Width="800">
+      Title="Products Page">
     <StackPanel Margin="10">
         <StackPanel Orientation="Horizontal" Margin="10" VerticalAlignment="Center">
             <TextBox x:Name="searchBox" Text="Поиск" Style="{StaticResource SearchTextBoxStyle}" GotFocus="SearchBox_GotFocus" LostFocus="SearchBox_LostFocus" />
@@ -28,7 +28,7 @@
         <Button Content="Инвентаризация" Click="ShowInventoryList_Click" Style="{StaticResource ButtonStyle}"/>
         </StackPanel>
 
-        <ListView ItemsSource="{Binding Products}" Margin="10" Height="350" Name="productsListView">
+        <ListView ItemsSource="{Binding Products}" Margin="10" Height="350" Width="1000" Name="productsListView">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Категория" DisplayMemberBinding="{Binding Category.Name}" />
@@ -49,6 +49,13 @@
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <Button Content="Ярлык" Tag="{Binding ProductId}" Click="Button_Click" Style="{StaticResource ButtonStyle}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn>
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Удалить" Click="DeleteProductsButton_Click" Tag="{Binding ProductId}" Style="{StaticResource ButtonStyle}" Height="25" Width="60" Margin="10,0,0,0" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
