--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -31,6 +31,8 @@
                 <Button Content="Продукты" Margin="10" Foreground="White" Background="Transparent" BorderBrush="Transparent" Click="Button_Click_Product_Page" />
                 <Button Content="Поставщики" Margin="10" Foreground="White" Background="Transparent" BorderBrush="Transparent" Click="Button_Click_Supplier_Page" />
                 <Button Content="Поставки" Margin="10" Foreground="White" Background="Transparent" BorderBrush="Transparent"  Click="Button_Click_Supply_Page"/>
+                <Button Content="Стелажи" Margin="10" Foreground="White" Background="Transparent" BorderBrush="Transparent"  Click="Button_Click_Shelving_Page"/>
+                <Button Content="Ячейки" Margin="10" Foreground="White" Background="Transparent" BorderBrush="Transparent"  Click="Button_Click_Cell_Page"/>
 
             </StackPanel>
         </Grid>
