--- a/Modals/AddProductModal.xaml
+++ b/Modals/AddProductModal.xaml
@@ -20,6 +20,21 @@
         <TextBox x:Name="ProductCountTextBox" Margin="10" PreviewTextInput="NumberTextBox_PreviewTextInput"/>
         <Label Content="Комната:" Margin="0 10 0 0"/>
         <TextBox x:Name="ProductRoomTextBox" Margin="10"/>
+
+        <!-- New fields -->
+        <Label Content="Описание:" Margin="0 10 0 0"/>
+        <TextBox x:Name="ProductDescriptionTextBox" Margin="10"/>
+        <Label Content="Ширина:" Margin="0 10 0 0"/>
+        <TextBox x:Name="ProductWidthTextBox" Margin="10" PreviewTextInput="NumberTextBox_PreviewTextInput"/>
+        <Label Content="Высота:" Margin="0 10 0 0"/>
+        <TextBox x:Name="ProductHeightTextBox" Margin="10" PreviewTextInput="NumberTextBox_PreviewTextInput"/>
+        <Label Content="Длина:" Margin="0 10 0 0"/>
+        <TextBox x:Name="ProductLengthTextBox" Margin="10" PreviewTextInput="NumberTextBox_PreviewTextInput"/>
+        <Label Content="Вес:" Margin="0 10 0 0"/>
+        <TextBox x:Name="ProductWeightTextBox" Margin="10" PreviewTextInput="NumberTextBox_PreviewTextInput"/>
+        <Label Content="Цена:" Margin="0 10 0 0"/>
+        <TextBox x:Name="ProductPriceTextBox" Margin="10" PreviewTextInput="NumberTextBox_PreviewTextInput"/>
+
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Height="30">
             <Button Content="Добавить" Style="{StaticResource ButtonStyle}" Click="AddButton_Click" />
             <Button Content="Отмена" Style="{StaticResource ButtonStyle}" Click="CancelButton_Click" />
