--- a/Modals/AddCategoryModal.xaml
+++ b/Modals/AddCategoryModal.xaml
@@ -10,9 +10,10 @@
 
         <!-- Применение стиля к Label -->
         <Label Content="Название категории:" Margin="0 10 0 0"/>
-
-        <!-- Применение стиля к TextBox -->
         <TextBox x:Name="CategoryNameTextBox" Margin="10" Style="{StaticResource TextBoxStyle}"/>
+        <Label Content="Надбавка:" Margin="0 10 0 0"/>
+        <TextBox x:Name="AllowanceNameTextBox" Margin="10" Style="{StaticResource TextBoxStyle}"/>
+
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
             <!-- Применение стиля к Button -->
