--- a/Pages/CategoryPage.xaml
+++ b/Pages/CategoryPage.xaml
@@ -31,6 +31,8 @@
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
+
+                    <GridViewColumn Header="Наценка" DisplayMemberBinding="{Binding ExtraCharge}" Width="200"/>
                 </GridView>
             </ListView.View>
         </ListView>
