add field Allowance

--- a/Pages/CategoryPage.xaml
+++ b/Pages/CategoryPage.xaml
@@ -26,13 +26,27 @@
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="{Binding Name}" VerticalAlignment="Center" Margin="0,0,10,0" />
-                                    <Button Content="Удалить" Click="DeleteCategoryButton_Click" Style="{StaticResource ButtonStyle}" Height="25" Width="60" Margin="10,0,0,0" />
                                 </StackPanel>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Header="Надбавка (BYN)" Width="100">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Allowance}" VerticalAlignment="Center" Margin="0,0,10,0" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Header="">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Удалить" Click="DeleteCategoryButton_Click" Style="{StaticResource ButtonStyle}" Height="25" Width="60" Margin="10,0,0,0" Tag="{Binding CategoryId}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
+
     </StackPanel>
 </Page>
