--- a/Modals/AddCellModal.xaml
+++ b/Modals/AddCellModal.xaml
@@ -9,7 +9,7 @@
     <StackPanel>
         <Label Content="Добавление ячейки" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center"/>
         <Label Content="Номер:" Margin="0 10 0 0"/>
-        <TextBox x:Name="SupplierNameTextBox" Style="{StaticResource TextBoxStyle}" Margin="10" PreviewTextInput="NumberTextBox_PreviewTextInput" />
+        <TextBox x:Name="NumberTextBox" Style="{StaticResource TextBoxStyle}" Margin="10" PreviewTextInput="NumberTextBox_PreviewTextInput" />
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Height="30">
             <Button Content="Добавить" Style="{StaticResource ButtonStyle}" Click="AddButton_Click" />
             <Button Content="Отмена" Style="{StaticResource ButtonStyle}" Click="CancelButton_Click" />
