--- a/Modals/AddSupplierModal.xaml
+++ b/Modals/AddSupplierModal.xaml
@@ -12,7 +12,7 @@
         <TextBox x:Name="SupplierNameTextBox" Style="{StaticResource TextBoxStyle}" Margin="10" />
 
         <Label Content="Телефон:" Margin="0 10 0 0"/>
-        <TextBox x:Name="SupplierPhoneTextBox" Style="{StaticResource TextBoxStyle}" Margin="10" />
+        <TextBox x:Name="SupplierPhoneTextBox" PreviewTextInput="NumberTextBox_PreviewTextInput" Style="{StaticResource TextBoxStyle}" Margin="10" />
 
         <Label Content="Электронная почта:" Margin="0 10 0 0"/>
         <TextBox x:Name="SupplierEmailTextBox" Style="{StaticResource TextBoxStyle}" Margin="10" />
