--- a/Pages/SupplyPage.xaml
+++ b/Pages/SupplyPage.xaml
@@ -17,7 +17,7 @@
                     <GridView>
                         <GridViewColumn Header="Дата" DisplayMemberBinding="{Binding Date, StringFormat='{}{0:dd.MM.yyyy HH:mm}'}"/>
                         <GridViewColumn Header="Поставщик" DisplayMemberBinding="{Binding Supplier.Name}"/>
-                        <GridViewColumn Header="Колличесво" DisplayMemberBinding="{Binding Count}"/>
+                        <GridViewColumn Header="Колличесво (шт)" DisplayMemberBinding="{Binding Count}" />
                         <GridViewColumn Header="Номер поставки" DisplayMemberBinding="{Binding SupplyId}"/>
                         <GridViewColumn>
                             <GridViewColumn.CellTemplate>
