--- a/Pages/SupplyPage.xaml
+++ b/Pages/SupplyPage.xaml
@@ -15,10 +15,10 @@
             <ListView ItemsSource="{Binding Supplies}" Margin="10" Height="350">
                 <ListView.View>
                     <GridView>
+                        <GridViewColumn Header="Номер поставки" DisplayMemberBinding="{Binding SupplyId}"/>
                         <GridViewColumn Header="Дата" DisplayMemberBinding="{Binding Date, StringFormat='{}{0:dd.MM.yyyy HH:mm}'}"/>
                         <GridViewColumn Header="Поставщик" DisplayMemberBinding="{Binding Supplier.Name}"/>
-                        <GridViewColumn Header="Колличесво (шт)" DisplayMemberBinding="{Binding Count}" />
-                        <GridViewColumn Header="Номер поставки" DisplayMemberBinding="{Binding SupplyId}"/>
+                        <GridViewColumn Header="Колличесво (шт)" DisplayMemberBinding="{Binding CountTotalProductCount }" /> 
                         <GridViewColumn>
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
